# adaptive-predictive-maintenance

./: .gitignore  README.md  pyproject.toml  requirements.txt
analysis/: chunk_inventory.csv  cmapss_metrics.csv  cross_dataset_summary.csv  cwru_metrics.csv  detection_results.csv  extracted_oem_params.json  extraction_report.txt  femto_metrics.csv  ims_metrics.csv  overall_metrics.csv  prior_quality_comparison.csv  regime_metrics.csv  xjtu_sy_metrics.csv
core/: adaptive_drift.py  baselines.py  evaluation.py  oem_prior.py
data/processed/: cmapss_FD001_fleet_prior.npy
datasets/cmapss/: config.py  download.py  feature_extraction.py  loader.py
datasets/cwru/: config.py  download.py  feature_extraction.py  loader.py
datasets/femto/: config.py  download.py  feature_extraction.py  loader.py
framework/: benchmark_runner.py  dataset_loader.py  results_summary.py
notebooks/: 01_ims_analysis.ipynb  01_oem_extraction.ipynb  02_feature_exploration.ipynb  02_femto_analysis.ipynb  03_cmapss_analysis.ipynb  03_model_comparison.ipynb  04_oxford_battery.ipynb  05_cross_dataset_comparison.ipynb  06_xjtu_sy_analysis.ipynb
rag/: extract_params.py  ingest.py  pdf_extract.py  retrieve.py
reports/: adaptive_maintenance.Rmd  benchmark_report.Rmd  benchmark_report.html
scripts/: download_all.sh  run_benchmark.sh
src/: adaptive_drift.py  download_cwru.py  evaluation.py  feature_extraction.py  oem_prior.py  regime_predictor.py
tests/: test_adaptive_drift.py  test_core.py  test_feature_extraction.py  test_oem_prior.py  test_rag.py  test_rag_pipeline.py  test_xjtu_sy.py
(+15 files in other folders)
