[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "adaptive-predictive-maintenance"
version = "0.1.0"
description = "Adaptive predictive maintenance with OEM priors and PID drift modeling"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "sentence-transformers>=2.2",
    "chromadb>=0.4",
    "PyMuPDF>=1.24.0",
    "jupyter>=1.0",
    "ipykernel>=6.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
